# automation-hat

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: analog_input.rs  digital_input.rs  digital_output.rs  lib.rs  lights.rs  relay.rs
